[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mlpyqtgraph"
version = "0.9.1"
description = "Matplotlib like plotting with pyqtgraph in python"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Sietze van Buuren", email = "s.van.buuren@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
urls = { Homepage = "https://github.com/swvanbuuren/mlpyqtgraph" }
dependencies = [
    "pyqtgraph==0.14.0",
    "pqthreads==0.6.1",
    "pyopengl==3.1.10",
]

[dependency-groups]
dev = [
  "ruff",
  "pytest",
]

[tool.setuptools.packages.find]
include = ["mlpyqtgraph", "mlpyqtgraph.*"]

[tool.semantic_release]
version_variables = ["mlpyqtgraph/__init__.py:__version__"]
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.changelog]
template_dir = ".github/templates"

[tool.ruff]
line-length = 80
indent-width = 4

[tool.ruff.lint]
preview = true
extend-select = [
  "D419",  # empty-docstring
  "E501",  # line-too-long
  "W291",  # trailing-whitespace
  "PLC0414",  # useless-import-alias
  "PLC2401",  # non-ascii-name
  "PLC2801",  # unnecessary-dunder-call
  "PLC3002",  # unnecessary-direct-lambda-call
  "PLE0101",  # return-in-init
  "F706",  # return-outside-function
  "F704",  # yield-outside-function
  "PLE0115",  # nonlocal-and-global
  "PLE0116",  # continue-in-finally
  "PLE0117",  # nonlocal-without-binding
  "PLE0241",  # duplicate-bases
  "PLE0302",  # unexpected-special-method-signature
  "PLE0604",  # invalid-all-object
  "PLE0605",  # invalid-all-format
  "PLE0643",  # potential-index-error
  "PLE0704",  # misplaced-bare-raise
  "PLE1141",  # dict-iter-missing-items
  "PLE1142",  # await-outside-async
  "PLE1205",  # logging-too-many-args
  "PLE1206",  # logging-too-few-args
  "PLE1307",  # bad-string-format-type
  "PLE1310",  # bad-str-strip-call
  "PLE1507",  # invalid-envvar-value
  "PLE1519",  # singledispatch-method
  "PLE1520",  # singledispatchmethod-function
  "PLE2502",  # bidirectional-unicode
  "PLE2510",  # invalid-character-backspace
  "PLE2512",  # invalid-character-sub
  "PLE2513",  # invalid-character-esc
  "PLE2514",  # invalid-character-nul
  "PLE2515",  # invalid-character-zero-width-space
  "PLE4703",  # modified-iterating-set
  "PLR0124",  # comparison-with-itself
  "PLR0202",  # no-classmethod-decorator
  "PLR0203",  # no-staticmethod-decorator
  "UP004",  # useless-object-inheritance
  "PLR0206",  # property-with-parameters
  "PLR0904",  # too-many-public-methods
  "PLR0911",  # too-many-return-statements
  "PLR0912",  # too-many-branches
  "PLR0913",  # too-many-arguments
  "PLR0914",  # too-many-locals
  "PLR0915",  # too-many-statements
  "PLR0916",  # too-many-boolean-expressions
  "PLR0917",  # too-many-positional-arguments
  "PLR1702",  # too-many-nested-blocks
  "PLR1704",  # redefined-argument-from-local
  "PLR1711",  # useless-return
  "C416",  # unnecessary-comprehension
  "PLR1733",  # unnecessary-dict-index-lookup
  "PLR1736",  # unnecessary-list-index-lookup
  "PLW0108",  # unnecessary-lambda
  "PLW0120",  # useless-else-on-loop
  "PLW0127",  # self-assigning-variable
  "PLW0128",  # redeclared-assigned-name
  "PLW0129",  # assert-on-string-literal
  "B033",  # duplicate-value
  "PLW0131",  # named-expr-without-context
  "PLW0177",  # nan-comparison
  "PLW0211",  # bad-staticmethod-argument
  "PLW0245",  # super-without-brackets
  "PLW0406",  # import-self
  "PLW0602",  # global-variable-not-assigned
  "PLW0603",  # global-statement
  "PLW0604",  # global-at-module-level
  "F401",  # unused-import
  "F841",  # unused-variable
  "E722",  # bare-except
  "PLW0711",  # binary-op-exception
  "PLW1501",  # bad-open-mode
  "PLW1507",  # shallow-copy-environ
  "PLW1508",  # invalid-envvar-default
  "PLW1509",  # subprocess-popen-preexec-fn
  "PLW1514",  # unspecified-encoding
  "PLW2101",  # useless-with-lock
  "PLW3301",  # nested-min-max
]

[tool.ruff.format]
quote-style = "single"

[tool.pytest.ini_options]
addopts = "-v -s"
